# minimum-c

./: .gitignore  CMakeLists.txt  README.md  alignment_padding.c  block_header.md  extending_heap_memory.md  find_free_block.md  main.c  malloc.c  sizeof_operator.c  validate_address.md
notes/: find_header.md  mastery.md  no-free-malloc.md
